<resources>
    <string name="app_name">NyFit</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_insert">InsertActivity</string>
    <string name="lebensmittel">Lebensmittel</string>
    <string name="kcal">Kcal</string>
    <string name="kohlenhydrate">Kohlenhydrate</string>
    <string name="proteine">Proteine</string>
    <string name="fett">Fett</string>
    <string name="title_activity_list_view">ListViewActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="add_food">Lebensmittel hinzufügen</string>
    <string name="list">Liste</string>
    <string name="plan1">Ernährungsplan 1</string>
    <string name="plan2">Ernährungsplan 2</string>
    <string name="statistics">Statistik</string>
    <string name="input_data">Eingabe</string>
    <string name="output_data">Übersicht</string>
    <string name="appName">NyFit</string>
    <string name="appDeveloper">Nasif Yüksel</string>

    <string name="title_activity_statistics_overview">StatisticsOverviewActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="app_not_available">AppNotAvailable</string>
    <string name="drawer_open">DrawerOpen</string>
    <string name="drawer_close">DrawperClose</string>
</resources>
