<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_add_foods"
            android:icon="@drawable/ic_local_dining"
            android:title="@string/add_food" />
        <item
            android:id="@+id/nav_foodlist"
            android:icon="@drawable/ic_list"
            android:title="@string/list" />
        <item
            android:id="@+id/nav_list1"
            android:icon="@drawable/ic_restaurant"
            android:title="@string/plan1" />
        <item
            android:id="@+id/nav_list2"
            android:icon="@drawable/ic_restaurant"
            android:title="@string/plan2" />
    </group>

    <item android:title="@string/statistics">
        <menu>
            <item
                android:id="@+id/nav_add"
                android:icon="@drawable/ic_mode_edit"
                android:title="@string/input_data" />
            <item
                android:id="@+id/nav_show"
                android:icon="@drawable/ic_show_chart"
                android:title="@string/output_data" />
        </menu>
    </item>

</menu>
